# rust-postgres-derive

./: .gitignore  .travis.yml  Cargo.toml  LICENSE-MIT  README.md  circle.yml
postgres-derive/: Cargo.toml
postgres-derive-codegen/: Cargo.toml  build.rs
postgres-derive-codegen/src/: accepts.rs  enums.rs  fromsql.rs  lib.rs  lib.rs.in  overrides.rs  tosql.rs
postgres-derive-codegen/test/: Cargo.toml  build.rs
postgres-derive-codegen/test/src/: main.rs  types.rs.in
postgres-derive-codegen2/: Cargo.toml
postgres-derive-codegen2/src/: accepts.rs  fromsql.rs  tosql.rs
postgres-derive-internals/: Cargo.toml
postgres-derive-internals/src/: accepts.rs  enums.rs  fromsql.rs  lib.rs  overrides.rs  tosql.rs
postgres-derive-macros/: Cargo.toml
postgres-derive-macros/src/: lib.rs
postgres-derive-macros/tests/: composite.rs  domains.rs  enums.rs  test.rs
postgres-derive-macros/tests/compile-fail/: bad-override.rs  big-tuple-struct.rs  complex-enum.rs
postgres-derive/src/: lib.rs
postgres-derive/tests/: composites.rs  domains.rs  enums.rs
postgres-derive/tests/util/: mod.rs
postgres-deriving-codegen/: Cargo.toml
postgres-deriving-codegen/src/: enums.rs  lib.rs
postgres-deriving-macros/: Cargo.toml
postgres-deriving-macros/src/: lib.rs
src/: accepts.rs  composites.rs  enums.rs  fromsql.rs  lib.rs  overrides.rs  tosql.rs
tests/: composites.rs  domains.rs  enums.rs  wrapper.rs
tests/util/: mod.rs
