[package]
name = "postgres-derive"
version = "0.3.3"
authors = ["Steven Fackler <sfackler@palantir.com>"]
license = "MIT/Apache-2.0"
description = "Deriving plugin support for Postgres enum, domain, and composite types"
repository = "https://github.com/sfackler/rust-postgres-derive"
readme = "README.md"
keywords = ["database", "postgres", "postgresql", "sql"]

[lib]
proc-macro = true
test = false

[dependencies]
syn = "0.13"
quote = "0.5"

[dev-dependencies]
postgres = "0.15.1"
