[package]
name = "postgres-derive-codegen"
version = "0.2.1"
authors = ["Steven Fackler <sfackler@gmail.com>"]
license = "MIT/Apache-2.0"
description = "Deriving codegen support for Postgres enum, domain, and composite types"
repository = "https://github.com/sfackler/rust-postgres-derive"
readme = "../README.md"
keywords = ["database", "postgres", "postgresql", "sql"]
exclude = ["test"]

[dependencies]
syntex = "0.50"
syntex_syntax = "0.50"
postgres-derive-internals = { version = "0.2.0", path = "../postgres-derive-internals" }
