[package]
name = "postgres-derive-internals"
version = "0.2.0"
authors = ["Steven Fackler <sfackler@palantir.com>"]
license = "MIT/Apache-2.0"
description = "Unstable internals library used by postgres-derive and postgres-derive-codegen"
repository = "https://github.com/sfackler/rust-postgres-derive"
readme = "../README.md"
keywords = ["database", "postgres", "postgresql", "sql"]

[dependencies]
syn = "0.9"
quote = "0.3"
