[package]
name = "postgres-derive-macros"
version = "0.1.0"
authors = ["Steven Fackler <sfackler@gmail.com>"]

[lib]
plugin = true
test = false

[dependencies]
postgres-derive-codegen = { path = "../postgres-derive-codegen", default-features = false, features = ["nightly"] }

[dev-dependencies]
postgres = "0.11.2"
compiletest_rs = "0.0.11"
