[package]
name = "postgres-derive-macros"
version = "0.1.0"
authors = ["Steven Fackler <sfackler@gmail.com>"]
license = "MIT/Apache-2.0"
description = "Deriving macro support for Postgres enum, domain, and composite types"
repository = "https://github.com/sfackler/rust-postgres-derive"
readme = "../README.md"
keywords = ["database", "postgres", "postgresql", "sql"]

[lib]
plugin = true
test = false

[dependencies]
postgres-derive-codegen = { path = "../postgres-derive-codegen", default-features = false, features = ["nightly"] }

[dev-dependencies]
postgres = "0.11.3"
compiletest_rs = "0.0.11"
