[package]
name = "postgres-derive"
version = "0.1.0"
authors = ["Steven Fackler <sfackler@palantir.com>"]

[lib]
proc-macro = true
test = false

[dependencies]
postgres-derive-internals = { path = "../postgres-derive-internals" }

[dev-dependencies]
postgres = { git = "https://github.com/sfackler/rust-postgres" }
