[package]
name = "postgres-derive"
version = "0.2.1"
authors = ["Steven Fackler <sfackler@palantir.com>"]
license = "MIT/Apache-2.0"
description = "Deriving plugin support for Postgres enum, domain, and composite types"
repository = "https://github.com/sfackler/rust-postgres-derive"
readme = "../README.md"
keywords = ["database", "postgres", "postgresql", "sql"]

[lib]
proc-macro = true
test = false

[dependencies]
postgres-derive-internals = { version = "0.2.0", path = "../postgres-derive-internals" }
syn = "0.10"

[dev-dependencies]
postgres = "0.12"
